@@ -1124,3 +1124,46 @@ class RectangleSelector:
                                   [self.eventpress.ydata, y])
             self.update()
             return False
+
+class Lasso(Widget):
+    def __init__(self, ax, xy, callback=None, useblit=True):
+        self.axes = ax
+        self.figure = ax.figure
+        self.canvas = self.figure.canvas
+        self.useblit = useblit
+        if useblit:
+            self.background = self.canvas.copy_from_bbox(self.axes.bbox)
+
+        x, y = xy
+        self.verts = [(x,y)]
+        self.line = Line2D([x], [y], linestyle='-', color='black', lw=2)
+        self.axes.add_line(self.line)
+        self.callback = callback
+        self.cids = []
+        self.cids.append(self.canvas.mpl_connect('button_release_event', self.onrelease))
+        self.cids.append(self.canvas.mpl_connect('motion_notify_event', self.onmove))
+
+    def onrelease(self, event):
+        if self.verts is not None:
+            self.verts.append((event.xdata, event.ydata))
+            if len(self.verts)>2:
+                self.callback(self.verts)
+            self.axes.lines.remove(self.line)
+        self.verts = None
+        for cid in self.cids:
+            self.canvas.mpl_disconnect(cid)
+        
+    def onmove(self, event):
+        if self.verts is None: return 
+        if event.inaxes != self.axes: return
+        if event.button!=1: return 
+        self.verts.append((event.xdata, event.ydata))
+
+        self.line.set_data(zip(*self.verts))
+
+        if self.useblit:
+            self.canvas.restore_region(self.background)
+            self.axes.draw_artist(self.line)
+            self.canvas.blit(self.axes.bbox)
+        else:
+            self.canvas.draw_idle()
